--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -55,7 +55,7 @@
                                     &nbsp;
                                 {{/if}}
                             </div>
-                            <div class="number-label">on demand</div>
+                            <div class="number-label">on-demand</div>
                         </div>
                     </div>
                 </a>
