--- a/SingularityUI/app/views/templates/requestsActiveFilter.hbs
+++ b/SingularityUI/app/views/templates/requestsActiveFilter.hbs
@@ -53,4 +53,7 @@
             data-requests-active-filter-shift="scheduled"
         >Scheduled</a>
     </li>
+    <li class="tip hidden-phone">
+        Tip: hold down SHIFT to select one at a time.
+    </li>
 </ul>
