Request page updates: - Property mapping  `lastStatus` =>  `lastTaskState` - Property mapping  `createdAt` =>  `taskId.startedAt` - Add deploy history table

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -51,6 +51,15 @@
 
 <section>
     <div class="page-header">
+        <h1>Deploy History</h1>
+    </div>
+    <div data-request-deploy-history>
+        {{> requestDeployHistory}}
+    </div>
+</section>
+
+<section>
+    <div class="page-header">
         <h1>History</h1>
     </div>
     <div data-request-history>
