--- a/SingularityUI/app/views/templates/requestHistory.hbs
+++ b/SingularityUI/app/views/templates/requestHistory.hbs
@@ -12,9 +12,9 @@
                 <tbody>
                     {{#eachWithFn requestHistory.requestUpdates}}
                         <tr>
-                            <td><span title="{{ state }}">{{ stateHuman }}</span></td>
-                            <td><span title="{{ user }}">{{ userHuman }}</span></td>
-                            <td data-value="{{ createdAt }}"><span title="{{ createdAt }}">{{ createdAtHuman }}</span></td>
+                            <td>{{ stateHuman }}</td>
+                            <td>{{ userHuman }}</td>
+                            <td data-value="{{ createdAt }}">{{ createdAtHuman }}</td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
