Add pause/unpause actions to request page (Resolves #105)

--- a/SingularityUI/app/styles/headerActions.styl
+++ b/SingularityUI/app/styles/headerActions.styl
@@ -4,7 +4,7 @@
 
     @media (min-width: 767px)
         position relative
-        padding-right 300px
+        padding-right 400px
 
     .header-actions
         font-size 0
@@ -13,9 +13,9 @@
 
         @media (min-width: 767px)
             position absolute
-            bottom 0
+            top 0
             right 0
-            width 300px
+            width 400px
             text-align right
             margin 0
 
