--- a/SingularityUI/app/views/templates/requestHeader.hbs
+++ b/SingularityUI/app/views/templates/requestHeader.hbs
@@ -8,6 +8,13 @@
         {{#if request.scheduledOrOnDemand}}
             <a data-request-id="{{ request.id }}" data-request-type="{{#if request.onDemand}}on-demand{{else}}scheduled{{/if}}" data-action="run-request-now">Run now</a>
         {{/if}}
+        {{#if request.fullObject}}
+            {{#if request.paused}}
+                <a data-request-id="{{ request.id }}" data-action="pause" data-action-unpause="true">Unpause</a>
+            {{else}}
+                <a data-request-id="{{ request.id }}" data-action="pause">Pause</a>
+            {{/if}}
+        {{/if}}
         <a data-request-id="{{ request.id }}" data-action="remove">Remove</a>
     </div>
 </h1>
