--- a/SingularityUI/app/views/templates/requestHistory.hbs
+++ b/SingularityUI/app/views/templates/requestHistory.hbs
@@ -7,6 +7,7 @@
                         <th>State</th>
                         <th>User</th>
                         <th>Created</th>
+                        <th data-sortable="false"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -15,6 +16,7 @@
                             <td>{{ stateHuman }}</td>
                             <td>{{ userHuman }}</td>
                             <td data-value="{{ createdAt }}">{{ createdAtHuman }}</td>
+                            <td class="actions-column"><a data-local-request-history-id="{{ request.localRequestHistoryId }}" data-action="viewRequestHistoryJSON">JSON</a>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
