--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -22,7 +22,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Historical Tasks</h1>
+        <h1>Historical Tasks &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}request/{{ request.id }}/historical-tasks" data-route="/request/{{ request.id }}/historical-tasks">View more at once</a></small></h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
