Add missing `</td>`

--- a/SingularityUI/app/views/templates/requestHistory.hbs
+++ b/SingularityUI/app/views/templates/requestHistory.hbs
@@ -16,7 +16,7 @@
                             <td>{{ stateHuman }}</td>
                             <td>{{ userHuman }}</td>
                             <td data-value="{{ createdAt }}">{{ createdAtHuman }}</td>
-                            <td class="actions-column"><a data-local-request-history-id="{{ request.localRequestHistoryId }}" data-action="viewRequestHistoryJSON">JSON</a>
+                            <td class="actions-column"><a data-local-request-history-id="{{ request.localRequestHistoryId }}" data-action="viewRequestHistoryJSON">JSON</a></td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
