--- a/SingularityUI/app/styles/headerActions.styl
+++ b/SingularityUI/app/styles/headerActions.styl
@@ -30,7 +30,7 @@
             border-radius 5px
             white-space nowrap
             font-weight normal
-            margin 0 14px 0 0
+            margin 0 14px 7px 0
 
             @media (min-width: 767px)
                 margin 0 0 0 14px
