Remove title casing throughout the app

--- a/SingularityUI/app/views/templates/requestsCleaning.hbs
+++ b/SingularityUI/app/views/templates/requestsCleaning.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>Cleaning Requests</h1>
+    <h1>Cleaning requests</h1>
 </header>
 
 <section>
