--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -82,7 +82,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Starred Requests</h1>
+        <h1>Starred requests</h1>
     </div>
 </section>
 
@@ -121,7 +121,7 @@
     {{#if requestsNotFound.length}}
         <section>
             <div class="page-header">
-                <h1>Starred Non-active Requests</h1>
+                <h1>Starred non-active requests</h1>
             </div>
             <div class="row-fluid">
                 <table class="table" data-sortable>
