--- a/SingularityUI/app/views/templates/racks.hbs
+++ b/SingularityUI/app/views/templates/racks.hbs
@@ -4,7 +4,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Active Racks</h1>
+        <h1>Active racks</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
@@ -38,7 +38,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Dead Racks</h1>
+        <h1>Dead racks</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
@@ -74,7 +74,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Decomissioning Racks</h1>
+        <h1>Decomissioning racks</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
