--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -8,7 +8,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Active Tasks</h1>
+        <h1>Active tasks</h1>
     </div>
     <div data-request-tasks-active-table-container>
         {{> requestTasksActiveTable}}
@@ -17,7 +17,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Scheduled Tasks</h1>
+        <h1>Scheduled tasks</h1>
     </div>
     <div data-request-tasks-scheduled-table-container>
         {{> requestTasksScheduledTable}}
@@ -26,7 +26,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Historical Tasks &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}request/{{ request.id }}/historical-tasks" data-route="/request/{{ request.id }}/historical-tasks">View more at once</a></small></h1>
+        <h1>Historical tasks &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}request/{{ request.id }}/historical-tasks" data-route="/request/{{ request.id }}/historical-tasks">View more at once</a></small></h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
@@ -45,7 +45,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Deploy History</h1>
+        <h1>Deploy history</h1>
     </div>
     <div data-request-deploy-history>
         {{> requestDeployHistory}}
