--- a/SingularityUI/app/views/templates/requestHistoricalTasks.hbs
+++ b/SingularityUI/app/views/templates/requestHistoricalTasks.hbs
@@ -7,7 +7,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Historical Tasks</h1>
+        <h1>Historical tasks</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
