--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>Active Requests</h1>
+    <h1>Active requests</h1>
 </header>
 
 <section>
