--- a/SingularityUI/app/views/templates/requestsPending.hbs
+++ b/SingularityUI/app/views/templates/requestsPending.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>Pending Requests</h1>
+    <h1>Pending requests</h1>
 </header>
 
 <section>
