--- a/SingularityUI/app/views/templates/slaves.hbs
+++ b/SingularityUI/app/views/templates/slaves.hbs
@@ -4,7 +4,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Active Slaves</h1>
+        <h1>Active slaves</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
@@ -42,7 +42,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Dead Slaves</h1>
+        <h1>Dead slaves</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
@@ -82,7 +82,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Decomissioning Slaves</h1>
+        <h1>Decomissioning slaves</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
