--- a/SingularityUI/app/styles/copyPre.styl
+++ b/SingularityUI/app/styles/copyPre.styl
@@ -9,10 +9,11 @@ pre.with-copy-button
         border 0
         outline 0
         color $linkBlue
-        text-align right
+        text-align center
         margin: -8.5px
-        padding 8.5px .7em 8.5px
-        margin-right 1em
+        padding 8.5px 0 8.5px
+        width 4.5em
+        margin-right .7em
 
         &.zeroclipboard-is-hover
             background $linkBlue
