Match vex loading spinner styles to the regular loaders

--- a/SingularityUI/app/styles/vex.styl
+++ b/SingularityUI/app/styles/vex.styl
@@ -35,3 +35,22 @@
             position absolute
             bottom 20px
             right 20px
+
+.vex-loading-spinner.vex-theme-default
+    position fixed
+    margin auto
+    top 0
+    left 0
+    bottom 0
+    right 0
+    height 2em
+    width 2em
+    border-radius 100%
+    border .25em solid transparent
+    border-top-color $grey
+    border-right-color $grey
+    z-index 300
+    backface-visibility hidden
+    animation spinner 700ms linear infinite
+    box-shadow 0 0 0 1em #fff
+    background #fff
