--- a/SingularityUI/app/styles/globalSearch.styl
+++ b/SingularityUI/app/styles/globalSearch.styl
@@ -11,7 +11,7 @@
     body.global-search-active &
         display block
 
-    input[type="search"][required]
+    .global-search-input-wrapper
         position absolute
         width 60rem
         max-width 80%
@@ -20,7 +20,11 @@
         right 0
         margin-left auto
         margin-right auto
+
+    input[type="search"][required]
+        width 100%
         height 2.5em
+        line-height 2.5em
         font-size 2em
         padding .5em
         margin-bottom 0
@@ -42,8 +46,7 @@
         display block
         z-index 999999
         background transparent
-        width 60rem
-        max-width 80%
+        width 100%
         box-shadow none
         font-size 2em
         margin-top 0
@@ -54,3 +57,18 @@
 
         li:not(.active) a
             color #666
+
+        &.dropdown-menu-hidden
+
+            li
+                display: none
+
+            &:after
+                content "No requests found"
+                display block
+                text-align center
+                padding 2em
+                color #888
+                display block
+                font-weight 300
+                letter-spacing .02em
