--- a/SingularityUI/app/views/templates/requestHeader.hbs
+++ b/SingularityUI/app/views/templates/requestHeader.hbs
@@ -6,16 +6,22 @@
             <a data-request-id="{{ request.id }}" data-action="viewObjectJSON">JSON</a>
         {{/if}}
         {{#if request.scheduledOrOnDemand}}
-            <a data-request-id="{{ request.id }}" data-request-type="{{#if request.onDemand}}on-demand{{else}}scheduled{{/if}}" data-action="run-request-now">Run now</a>
+            {{#unless request.deleted}}
+                <a data-request-id="{{ request.id }}" data-request-type="{{#if request.onDemand}}on-demand{{else}}scheduled{{/if}}" data-action="run-request-now">Run now</a>
+            {{/unless}}
         {{/if}}
         {{#if request.fullObject}}
-            {{#if request.paused}}
-                <a data-request-id="{{ request.id }}" data-action="pause" data-action-unpause="true">Unpause</a>
-            {{else}}
-                <a data-request-id="{{ request.id }}" data-action="pause">Pause</a>
-            {{/if}}
+            {{#unless request.deleted}}
+                {{#if request.paused}}
+                    <a data-request-id="{{ request.id }}" data-action="pause" data-action-unpause="true">Unpause</a>
+                {{else}}
+                    <a data-request-id="{{ request.id }}" data-action="pause">Pause</a>
+                {{/if}}
+            {{/unless}}
         {{/if}}
-        <a data-request-id="{{ request.id }}" data-action="remove">Remove</a>
+        {{#unless request.deleted}}
+            <a data-request-id="{{ request.id }}" data-action="remove">Remove</a>
+        {{/unless}}
     </div>
 </h1>
 {{#eachWithFn requestHistory.requestUpdates}}
