--- a/SingularityUI/app/styles/globalSearch.styl
+++ b/SingularityUI/app/styles/globalSearch.styl
@@ -8,6 +8,22 @@
     right 0
     background rgba(255, 255, 255, .9)
 
+    .global-search-close
+        position absolute
+        top 0
+        right 0
+        font-size 4em
+        padding .5em
+        color inherit
+        opacity .5
+        text-decoration none
+
+        &:hover
+            opacity 1
+
+    .global-search-tip
+        text-align right
+
     body.global-search-active &
         display block
 
